--- a/test.yml
+++ b/test.yml
@@ -1,3 +1,3 @@
 
 
-new`this is`dsa".*><"new"><img src=x onerror=alert(1)>${7*7}/somefile:///etc/p
+new`this is`dsa".*><"new"><img src=x onerror=alert(1)>${7*7}/somefile:///etc/p<body><new><h1>dsa</h1>
