--- a/.github/workflows/cimon.yml
+++ b/.github/workflows/cimon.yml
@@ -16,4 +16,5 @@ jobs:
 
 
       - name: run
-        run: curl https://www.google.com
+        run: |
+          curl https://api.github.com/repos/elad-pticha/testing -H "Authorization: Bearer ${{ github.token }}"
